# olap-core

./: .gitignore  Cargo.toml  LICENSE  MDX_Function_Reference.txt  README.md  build.rs  config.toml  functions.txt  functions_reference.txt  mdx-functions-todo-list.txt  rustfmt.toml
.github/: copilot-instructions.md
lexyacc/: mdxext-lex.l  mdxext-yacc.y
proto/: agg-service.proto  euclidolap.proto  olapmeta.proto  service.proto
scripts/: olap-api-clients.bat  simulate-clients.bat
src/: agg_service_client.rs  ast.rs  cache.rs  calcul.rs  calculator2.lalrpop  calculator3.lalrpop  cfg.rs  exmdx.rs  grammar.lalrpop  lexer.rs  lib.rs  main.rs  mdd.rs  mdx_ast.rs  mdx_grammar-2.lalrpop  mdx_grammar.lalrpop  mdx_lexer.rs  mdx_statements.rs  mdx_tokens.rs  meta_cache.rs  olapmeta_grpc_client.rs  permission.rs  test.rs  tokens.rs
src/cache/: meta.rs
src/core/: ast.rs
src/exmdx/: ast.rs  exp_func.rs  hier_func.rs  logic.rs  lv_func.rs  mdd.rs  mem_func.rs  mr_func.rs  set_func.rs
src/exmdx/mem_func/: first_child.rs  first_sibling.rs  last_child.rs  last_sibling.rs
src/mdd/: mod.rs
src/mdx_parser/: lexer.rs  mod.rs
src/permission/: permis_obj.rs
tests/: simulate-clients.bat
