[package]
name = "olap-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# gRPC 实现库
tonic = "0.9"
# Protocol Buffers 编解码库
prost = "0.11"
# 异步运行时
tokio = { version = "1", features = ["full"] }
# 正则表达式库
# regex = "1.11.1"
# 解析器组合库
nom = "7.1"
# nom-regex = "0.1"
logos = "=0.14.2"
logos-derive = "=0.14.2"
logos-codegen = "=0.14.2"
lalrpop-util = { version = "0.22.0", features = ["unicode"] }

[build-dependencies]
tonic-build = "0.9"
# If you are supplying your own external lexer you can disable default features so that the built-in lexer feature is not included
lalrpop = { version = "0.22.0", default-features = false }

[features]
default = []
bit = []
