# >> Code Review: Power of Hippo << --- doing......
[package]
name = "olap-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# gRPC implementation library
tonic = "0.9"

# Protocol Buffers encoder/decoder
prost = "0.11"

# Asynchronous runtime
tokio = { version = "1", features = ["full"] }

futures = "0.3"

# Parser combinator framework (used for building parsers)
nom = "7.1"

# Tokenizer generator (used for lexing)
logos = "^0.14.2"
logos-derive = "^0.14.2"
logos-codegen = "^0.14.2"

# LALRPOP utilities with Unicode support
lalrpop-util = { version = "0.22.0", features = ["unicode"] }

once_cell = "1.20.2"

[build-dependencies]
# Used to compile .proto files into Rust code
tonic-build = "0.9"

# LALRPOP parser generator without built-in lexer (custom lexer is used instead)
lalrpop = { version = "0.22.0", default-features = false }

[features]
# Empty by default
default = []
